# ollama-code-cli

./: .gitignore  README.md  main.py  pyproject.toml
ollamacode/: __init__.py
ollamacode/cli/: cli.py
ollamacode/tools/: tool_manager.py
